# Estin-Chat

./: .env  .gitignore  README.md  pyproject.toml
client/: README.md
core/: README.md
data-pipeline/: README.md
data-pipeline/data-precleaning-organization/scripts/: load.py  move_irrelevant_files.py  organize_by_format.py  restore_ignored_files.py  scrapping_drive_links.py
data-pipeline/pipeline/: orchestrate.py  test_orchestrate.py
data-pipeline/utils/load/: load_pdfs.py  pdf_loader.py
data-pipeline/utils/load/tests/: test_pdf_loader.py
data-pipeline/utils/split/: hierarchical_splitter.py
data-pipeline/utils/split/tests/: test_hierarchical_splitter.py
data-pipeline/utils/transform/: image_cleanup.py  model.py  prompts.py  table_cleanup.py  text_cleanup.py  text_cleanup_llm.py
data-pipeline/utils/transform/batch_cleanup/: .env.api.example  cli.py  prepare_batch.py
data-pipeline/utils/transform/tests/: test_image_cleanup.py  test_table_cleanup.py  test_text_cleanup.py
data-precleaning-organization/scripts/: generate_index.py  move_irrelevant_files.py  rename_files.py
deployment/: deployment-readme.md
milvus/: .env.milvus.example  README.md  client.py  compose.yml  load_optimized.py  milvus.yaml  print_record.py  setup.py  test2.py  test3.py  test4.py  test_connection.py  verify_and_load.py
milvus/data_upload/: cli.py  utils.py
milvus/setup/: client.py  collection.py  data.py  exemple.json  schema.py  stats.py
milvus/utils/: verify_vectors.py
models/tei_embedding_provider/: .env.embedding.example  compose.yml  inference.py
models/vllm_inference_server/: .container.env  .env.container.example  .env.example  .env.vllm.example  .vllm.env  README.md  compose.yml  run-command.txt  vllm-config.yaml
rag_chain/: final_version.py  rag_pipeline_v2.py  rag_pipeline_v4.py  rag_pipeline_v4_ollama.py  rag_pipeline_v5_ollama_8bkxl.py  rag_pipeline_v6_ollama_8bkm.py  rag_pipeline_v7_ollama_4bkxl.py  rag_pipeline_vllm_v1.py  rag_pipeline_vllm_v2_Qwen3_8B.py  rag_pipeline_vllm_v3_Qwen3_1_7B.py
server/: README.md
