[project]
name = "estin-chatbot"
version = "1.0"
description = "A RAG-based chatbot for ESTIN students, built by ESTIN students"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENCE"}
authors = [
    {name = "Yasser Messahli", email = "y_messahli@estin.dz"},
    {name = "Anis Besmail", email = "a_bensmail@estin.dz"},
    {name = "Melissa Ghemari", email = "m_ghemari@estin.dz"},
    {name = "Samy Debaili", email = "m_debaili@estin.dz"},
]
maintainers = [
    {name = "Faical Azouaou", email = "azouaou@estin.dz"},
    {name = "Ahror Belaid", email = "belaid@estin.dz"},
]
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-text-splitters>=0.3.8",
    "python-dotenv>=1.0.0",
]


[dependency-groups]
rag = []
data-pipeline = [
    "huggingface-hub>=0.33.2",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pymilvus[bulk-writer]>=2.5.11",
    "pymupdf>=1.26.1",
    "tiktoken>=0.9.0",
]
docs = []
tests = [
    "milvus-cli>=1.0.2",
]
